Arreglos post merge de tarjeta

--- a/InternetBankingApp/Views/Customer/Index.cshtml
+++ b/InternetBankingApp/Views/Customer/Index.cshtml
@@ -21,6 +21,7 @@
 
                                         <div class="followers-count mt-2">
 
+                                            <h6>Identifer: @cuentas.Identifier </h6>
                                             <h6>Saving: @cuentas.Balance$ </h6>
 
                                         </div>
@@ -40,6 +41,7 @@
 
                                         <div class="followers-count mt-2">
 
+                                            <h6>Identifer: @cuentas.Identifier </h6>
                                             <h6>Saving: @cuentas.Balance$</h6>
 
                                         </div>
@@ -64,6 +66,7 @@
 
                                         <div class="followers-count mt-2">
 
+                                            <h6>Identifer: @tarjetas.Identifier </h6>
                                             <h6>Limit: @tarjetas.Limit$</h6>
                                             <h6 class="fw-bold" style="color: #eeef20">Debt: @tarjetas.Debt$</h6>
 
@@ -89,6 +92,7 @@
 
                                         <div class="followers-count mt-2">
 
+                                            <h6>Identifer: @prestamo.Identifier </h6>
                                             <h6>Initial Debt: @prestamo.InitialDebt$ </h6>
                                             <h6 class="fw-bold" style="color: #eeef20">Debt: @prestamo.CurrentDebt$</h6>
 
