--- a/InternetBankingApp/Views/Customer/PagoCuentaCuenta.cshtml
+++ b/InternetBankingApp/Views/Customer/PagoCuentaCuenta.cshtml
@@ -35,6 +35,7 @@
 
         <input type="hidden" asp-for="Tipe" value="5" />
 
+        <span asp-validation-for="ProductDestinoIde" class="text-danger"></span>
         <label class="mb-1 text-white" asp-for="ProductDestinoIde">Cuentas de Destino</label>
         <select class="form-control mb-3" asp-for="ProductDestinoIde">
 
