Creacion del metodo de Avance efectivo

--- a/InternetBankingApp/Views/Customer/AvanceEfectivo.cshtml
+++ b/InternetBankingApp/Views/Customer/AvanceEfectivo.cshtml
@@ -1,5 +1,6 @@
 ﻿@using InternetBankingApp.Core.Application.ViewModels.Transaccion;
 @using InternetBankingApp.Core.Application.ViewModels.Prestamo;
+@using InternetBankingApp.Core.Application.ViewModels.TarjetaDeCredito;
 @using InternetBankingApp.Core.Application.ViewModels.CuentaDeAhorro;
 @using InternetBankingApp.Core.Application.Enums;
 @using Microsoft.AspNetCore.Http;
@@ -9,29 +10,29 @@
 @model SaveTransaccionViewModel;
 
 @{
-    ViewData["Title"] = "Pago prestamo";
+    ViewData["Title"] = "Avance Efectivo";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
     var user = httpContext.HttpContext.Session.get<AuthenticationResponse>
           ("User");
 
     List<CuentaDeAhorroViewModel> Cuentas = ViewBag.cuentas;
-    List<PrestamoViewModel> prestamos = ViewBag.prestamos;
+    List<TarjetaDeCreditoViewModel> tarjetas = ViewBag.tarjetas;
 }
 
 <div class="d-flex align-items-center justify-content-center container mt-4">
-    <form method="post" class="w-25 bg-secondary p-3" asp-controller="Customer" asp-action="PagoPrestamo">
+    <form method="post" class="w-25 bg-secondary p-3" asp-controller="Customer" asp-action="AvanceEfectivo">
         <div class="p-2 bg-light mb-2 ">
-            <h1 style="color: white;" class="text-center text-black">Pagar Prestamo</h1>
-        </div> 
+            <h1 style="color: white;" class="text-center text-black">Avance Efectivo</h1>
+        </div>
 
         <input type="hidden" name="userId" value="@user.Id" />
-        <input type="hidden" asp-for="Tipe" value="@((int)ETipoPago.PagoPretamo)" />
+        <input type="hidden" asp-for="Tipe" value="@((int)ETipoPago.AvanceEfectivo)" />
 
-        <span asp-validation-for="ProductDestinoIde" class="text-danger"></span>
-        <label asp-for="ProductDestinoIde" class="form-label">Prestamo a pagar :</label>
-        <select class="form-control mb-3" asp-for="ProductDestinoIde">
-            @foreach (var item in prestamos)
+        <span asp-validation-for="ProductOrigenIde" class="text-danger"></span>
+        <label asp-for="ProductOrigenIde" class="form-label">Seleccione una tarjeta</label>
+        <select class="form-control mb-3" asp-for="ProductOrigenIde">
+            @foreach (var item in tarjetas)
             {
                 <option value="@item.Identifier">
                     @item.Identifier
@@ -40,12 +41,12 @@
         </select>
 
         <span asp-validation-for="Amount" class="text-danger"></span>
-        <label asp-for="Amount" class="form-label">Cantidad a pagar:</label>
-        <input type="number" class="form-control mb-3" asp-for="Amount" value="0"/>
-        
-        <span asp-validation-for="ProductOrigenIde" class="text-danger"></span>
-        <label asp-for="ProductOrigenIde" class="form-label">Seleccione una cuenta:</label>
-        <select class="form-control mb-3" asp-for="ProductOrigenIde">
+        <label asp-for="Amount" class="form-label">Monto de Avance efectivo:</label>
+        <input type="number" class="form-control mb-3" asp-for="Amount" value="0" />
+
+        <span asp-validation-for="ProductDestinoIde" class="text-danger"></span>
+        <label asp-for="ProductDestinoIde" class="form-label">Seleccione una cuenta:</label>
+        <select class="form-control mb-3" asp-for="ProductDestinoIde">
             @foreach (var item in Cuentas)
             {
                 <option value="@item.Identifier">
@@ -58,7 +59,8 @@
 
         <div class="d-flex  justify-content-end align-items-end " style="gap:10px ;">
             <a asp-controller="Customer" asp-action="Index" asp-route-userId="@user.Id" class="btn btn-danger  font-weight-bold  ">Cancelar</a>
-            <button type="submit"  class="btn btn-primary font-weight-bold">Pagar</button>
+            <button type="submit" class="btn btn-primary font-weight-bold">Pagar</button>
         </div>
     </form>
 </div>
+
