--- a/InternetBankingApp/Views/Shared/_Layout.cshtml
+++ b/InternetBankingApp/Views/Shared/_Layout.cshtml
@@ -84,7 +84,7 @@
                                     <a class="nav-link text-white" asp-area="" asp-route-userId="@user.Id" asp-controller="Customer" asp-action="Beneficiary">Beneficiarios</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Customer" asp-action="Index">Avance Efectivo</a>
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Customer" asp-action="AvanceEfectivo">Avance Efectivo</a>
                                 </li>
                                 <li class="nav-item">
                                 <li><a class="nav-link text-white" asp-route-userId="@user.Id" asp-controller="Customer" asp-action="PagoCuentaCuenta">Transferencia</a></li>
