--- a/InternetBankingApp/Views/Customer/Index.cshtml
+++ b/InternetBankingApp/Views/Customer/Index.cshtml
@@ -17,7 +17,7 @@
                             <div class="card--seguidores" style="background: #023e8a">
                                 <div class="card--header">
                                     <div class="amount--seguidores">
-                                        <span class="titleCuentaPrimaria">Cuentas de Ahorro Primaria</span>
+                                        <span class="titleCuentaPrimaria">Cuenta de Ahorro Primaria</span>
 
                                         <div class="followers-count mt-2">
 
@@ -37,7 +37,7 @@
                             <div class="card--seguidores" style="background: #023e8a">
                                 <div class="card--header">
                                     <div class="amount--seguidores">
-                                        <span class="title">Cuentas de Ahorro</span>
+                                        <span class="title">Cuenta de Ahorro</span>
 
                                         <div class="followers-count mt-2">
 
@@ -62,7 +62,7 @@
                             <div class="card--seguidores" style="background: #023e8a">
                                <div class="card--header">
                                   <div class="amount--seguidores">
-                                        <span class="title">Tarjeta Credito</span>
+                                        <span class="title">Tarjeta de Credito</span>
 
                                         <div class="followers-count mt-2">
 
@@ -88,7 +88,7 @@
                             <div class="card--seguidores" style="background: #023e8a">
                                 <div class="card--header">
                                     <div class="amount--seguidores">
-                                        <span class="title">Prestamo</span>
+                                        <span class="title">Cuenta de Prestamo</span>
 
                                         <div class="followers-count mt-2">
 
