--- a/InternetBankingApp/Views/Customer/PagoCuentaCuenta.cshtml
+++ b/InternetBankingApp/Views/Customer/PagoCuentaCuenta.cshtml
@@ -90,7 +90,7 @@
                                     </option>
                                 }
                             </select>
-                            <span asp-validation-for="ProductDestinoIde"></span>
+                            <span asp-validation-for="ProductDestinoIde" class="text-danger"></span>
                         </div>
                         <div class="mb-3">
                             <label asp-for="ProductOrigenIde">Cuentas de Origen</label>
@@ -103,12 +103,12 @@
                                     </option>
                                 }
                             </select>
-                            <span asp-validation-for="ProductOrigenIde"></span>
+                            <span asp-validation-for="ProductOrigenIde" class="text-danger"></span>
                         </div>
                         <div class="mb-3">
                             <label>Monto</label>
                             <input type="number" value="0" asp-for="Amount" class="form-control" placeholder="$Ingrese el monto" />
-                            <span asp-validation-for="Amount"></span>
+                            <span asp-validation-for="Amount" class="text-danger"></span>
                         </div>
 
                         <input type="hidden" asp-for="userId" value="@user.Id" />
