--- a/InternetBankingApp/wwwroot/css/site.css
+++ b/InternetBankingApp/wwwroot/css/site.css
@@ -1,5 +1,9 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
@@ -86,7 +90,7 @@ body {
 .titleCuentaPrimaria {
     color: #ffee32;
     font-size: 15px;
-    font-weight: 200;
+    font-weight: 600;
 }
 
 .followers-count {
