--- a/InternetBankingApp/Views/Customer/PagoBeneficiarios.cshtml
+++ b/InternetBankingApp/Views/Customer/PagoBeneficiarios.cshtml
@@ -87,7 +87,7 @@
                                     </option>
                                 }
                             </select>
-                            <span asp-validation-for="ProductDestinoIde"></span>
+                            <span asp-validation-for="ProductDestinoIde" class="text-danger"></span>
                         </div>
                         <div class="mb-3">
                             <label  asp-for="ProductOrigenIde">Cuentas</label>
@@ -100,13 +100,13 @@
                                     </option>
                                 }
                             </select>
-                            <span asp-validation-for="ProductOrigenIde"></span>
+                            <span asp-validation-for="ProductOrigenIde" class="text-danger"></span>
                         </div>
 
                         <div class="mb-3">
                             <label>Monto</label>
                             <input type="number" value="0" asp-for="Amount" class="form-control" placeholder="$Ingrese el monto" />
-                            <span asp-validation-for="Amount"></span>
+                            <span asp-validation-for="Amount" class="text-danger"></span>
                         </div>
 
                         <input type="hidden" asp-for="userId" value="@user.Id" />
