--- a/InternetBankingApp/Views/Customer/PagoExpreso.cshtml
+++ b/InternetBankingApp/Views/Customer/PagoExpreso.cshtml
@@ -65,7 +65,7 @@
                         <div class="mb-3">
                             <label asp-for="ProductDestinoIde">Numero Cuenta</label>
                             <input type="text" class="form-control mb-3" placeholder="Numero de Cuenta" asp-for="ProductDestinoIde" value="" />
-                            <span asp-validation-for="ProductDestinoIde"></span>
+                            <span asp-validation-for="ProductDestinoIde" class="text-danger"></span>
 
                         </div>
 
@@ -80,13 +80,13 @@
                                     </option>
                                 }
                             </select>
-                            <span asp-validation-for="ProductOrigenIde"></span>
+                            <span asp-validation-for="ProductOrigenIde" class="text-danger"></span>
                         </div>
 
                         <div class="mb-3">
                             <label>Monto</label>
-                            <input type="text" value="0" asp-for="Amount" class="form-control" placeholder="$Ingrese el monto" />
-                            <span asp-validation-for="Amount"></span>
+                            <input type="number" value="0" asp-for="Amount" class="form-control" placeholder="$Ingrese el monto" />
+                            <span asp-validation-for="Amount" class="text-danger"></span>
                         </div>
 
                         <input type="hidden" asp-for="Tipe" value="1" />
