--- a/InternetBankingApp/Views/Customer/PagoPrestamo.cshtml
+++ b/InternetBankingApp/Views/Customer/PagoPrestamo.cshtml
@@ -104,8 +104,8 @@
 
                         <div class="mb-3">
                             <label>Monto</label>
-                            <input type="text" value="0" asp-for="Amount" class="form-control" placeholder="$Ingrese el monto" />
-                            <span asp-validation-for="Amount"></span>
+                            <input type="number" value="0" asp-for="Amount" class="form-control" placeholder="$Ingrese el monto" />
+                            <span asp-validation-for="Amount" class="text-danger"></span>
                         </div>
 
                         <input type="hidden" name="userId" value="@user.Id" />
