Cambios menores en la vista de Index customer

--- a/InternetBankingApp/Views/Customer/Index.cshtml
+++ b/InternetBankingApp/Views/Customer/Index.cshtml
@@ -94,7 +94,7 @@
 
                                             <h6>Identifer: @prestamo.Identifier </h6>
                                             <h6>Initial Debt: @prestamo.InitialDebt$ </h6>
-                                            <h6 class="fw-bold" style="color: #eeef20">Debt: @prestamo.CurrentDebt$</h6>
+                                            <h6 class="fw-bold" style="color: #eeef20">Current Debt: @prestamo.CurrentDebt$</h6>
 
                                         </div>
                                     </div>
