--- a/InternetBankingApp/Views/Administrator/ManageProducts.cshtml
+++ b/InternetBankingApp/Views/Administrator/ManageProducts.cshtml
@@ -1,4 +1,4 @@
 ﻿@model string
 
 <a asp-route-userId="@Model" asp-controller="Customer" asp-action="AddProduct" asp-route-userId="@Model" class="btn text-white" style="background: #023e8a"><i class="fa-brands fa-product-hunt"></i></a>
-<a asp-route-userId="@Model" asp-controller="Customer" asp-action="DeleteProduct" asp-route-userId="@Model" class="btn text-white" style="background: #113b4a"><i class="fa-brands fa-eraser-hunt"></i></a>
+<a asp-route-userId="@Model" asp-controller="Customer" asp-action="DeleteProduct" asp-route-userId="@Model" class="btn text-white" style="background: #113b4a"><i class="fa-brands fa-product-hunt"></i></a>
