--- a/InternetBankingApp/Views/Administrator/EditUser.cshtml
+++ b/InternetBankingApp/Views/Administrator/EditUser.cshtml
@@ -19,7 +19,6 @@
 
         <input asp-for="UserName" class="form-control w-100 mb-3 p-2" placeholder="User Name">
 
-
         <input asp-for="Password" class="form-control w-100 mb-3 p-2" placeholder="Password">
 
         <input asp-for="ConfirnPassword" class="form-control w-100 mb-3 p-2" placeholder="Confirn Password">
@@ -28,7 +27,7 @@
 
 
         <div class="d-flex  justify-content-end align-items-end" style="gap:10px;">
-            <a asp-controller="Customer" asp-action="Index" class="btn btn-secondary font-weight-bold ">Cancelar</a>
+            <a asp-controller="Administrator" asp-action="Index" class="btn btn-secondary font-weight-bold ">Cancelar</a>
             <button type="submit" class="btn btn-primary  font-weight-bold">Edit</button>
         </div>
     </form>
