--- a/InternetBankingApp/Views/Customer/PagoPrestamo.cshtml
+++ b/InternetBankingApp/Views/Customer/PagoPrestamo.cshtml
@@ -71,6 +71,7 @@
                 <div class="card-header text-light text-center" style="background: #023e8a">
                     <h6>Pago Prestamo</h6>
                 </div>
+                @Html.ValidationSummary(false, "", new { @class = "text-danger" })
                 <div class="card-body">
                     <form method="post" asp-controller="Customer" asp-action="PagoPrestamo">
                         <div class="mb-3">
