--- a/InternetBankingApp/Views/Customer/PagoCuentaCuenta.cshtml
+++ b/InternetBankingApp/Views/Customer/PagoCuentaCuenta.cshtml
@@ -77,6 +77,7 @@
                 <div class="card-header text-light text-center" style="background: #023e8a">
                     <h6>Transferencia</h6>
                </div>
+                @Html.ValidationSummary(false, "", new { @class = "text-danger" })
                <div class="card-body">
                     <form method="post" asp-controller="Customer" asp-action="PagoCuentaCuentaPost">
                         <div class="mb-3">
